tests/golden/err-inline-tab/expected_error.txt
error: タブは使えません
 --> ./entry.clum:3:17
  |
3 |     h .div class	'container'
  |                 ^
